# Raytracing-from-scratch

./: Cargo.toml  LICENSE_MIT  README.md  build.sh  watch.sh
src/: circle.rs  color.rs  lib.rs  ray.rs  scene.rs  sphere.rs  util.rs  vector.rs
src/scene/: light.rs  material.rs  scene.rs  sphere.rs  triangle.rs
src/util/: camera.rs  color.rs  hit.rs  matrices.rs  ray.rs  vector.rs
ui/: angular.json  package-lock.json  package.json  tsconfig.app.json
ui/public/shaders/: fullscreen-cyan.wgsl
ui/src/app/: app.css  app.html  app.ts  render.worker.ts
ui/src/app/components/color-input/: color-input.html  color-input.ts
ui/src/app/components/vec3-input/: vec3-input.html  vec3-input.ts
ui/src/app/scene-panel/: scene-panel.css  scene-panel.html  scene-panel.ts
ui/src/app/services/: scene.ts
